--- a/src/App.css
+++ b/src/App.css
@@ -35,3 +35,21 @@
 }
 
 /* end header style */
+
+/* product UI style */
+.product-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.product-item {
+  border: 1px solid #ccc;
+  padding: 20px;
+  margin: 20px;
+}
+
+.product-item button {
+  margin-right: 10px;
+}
+
+/* end product Ui style */
