--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,33 @@
-/* header style */
-* {
+body {
   margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+}
+
+.App {
+  text-align: center;
+}
+
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+.logo {
+  float: left;
+  margin: 0;
+  padding: 20px;
+}
+
+/* header style */
 .header {
   background-color: orange;
   height: 100px;
@@ -21,9 +44,6 @@
 }
 
 .cart-div span {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   background-color: green;
   border-radius: 100%;
   height: 20px;
@@ -48,8 +68,40 @@
   margin: 20px;
 }
 
-.product-item button {
-  margin-right: 10px;
+/* end product Ui style */
+
+/* cart page style */
+.cart-page-container {
+  display: flex;
+  margin-left: 30px;
+  margin-right: 30px;
 }
 
-/* end product Ui style */
+.cart-page-container table {
+  flex: 65%;
+  border-collapse: collapse;
+}
+
+.cart-page-container table td {
+  border: 1px solid #ccc;
+  padding: 15px;
+}
+
+.price-details {
+  flex: 35%;
+  margin: 0px 30px;
+}
+
+.price-details .adjust-price {
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 10px;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #ddd;
+}
+
+.price-details .adjust-price span {
+  font-size: 20px;
+}
+
+/* end cart page style */
