--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,8 @@ code {
 .header {
   background-color: orange;
   height: 100px;
+  display: flex;
+  justify-content: space-between;
 }
 
 .cart-div {
@@ -105,3 +107,18 @@ code {
 }
 
 /* end cart page style */
+
+
+.search-box {
+  float: left;
+  padding: 25px;
+  width: 40%;
+  border-radius: 50%;
+}
+
+.search-box input {
+  width: 100%;
+  height: 40px;
+  border: 1px solid #777;
+  padding-left: 10px;
+}
